--- a/output/.releaserc.yaml.jinja
+++ b/output/.releaserc.yaml.jinja
@@ -6,7 +6,7 @@ branches:
   - name: alpha
     prerelease: true
 
-repositoryUrl: https://github.com/nickderobertis/stackranked
+repositoryUrl: https://github.com/{{ repo_username }}/{{ repo_name }}
 
 plugins:
   - "@semantic-release/commit-analyzer"
