--- a/output/frontend/stackranked/README.md.jinja
+++ b/output/frontend/stackranked/README.md.jinja
@@ -1,6 +1,6 @@
-# StackRanked
+# {{ application_name }}
 
-StackRanked Next.js web frontend
+{{ application_name }} Next.js web frontend
 
 This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).
 
