--- a/output/infra/common/frontend-secrets.hcl.jinja
+++ b/output/infra/common/frontend-secrets.hcl.jinja
@@ -1,5 +1,5 @@
 locals {
-  project_directory = abspath("${get_terragrunt_dir()}/../../../frontend/stackranked")
+  project_directory = abspath("${get_terragrunt_dir()}/../../../frontend/{{ application_slug }}")
   sentry_auth_token = get_env("SENTRY_AUTH_TOKEN")
 }
 
