--- a/output/.github/actions/changed-paths/action.yml.jinja
+++ b/output/.github/actions/changed-paths/action.yml.jinja
@@ -1,3 +1,4 @@
+{% raw %}
 name: Get changed areas of the app
 description: "Get changed areas of the app based on paths changed"
 inputs:
@@ -36,10 +37,10 @@ runs:
     - uses: dorny/paths-filter@v2
       id: changes
       with:
-        base: ${{ steps.base-ref.outputs.ref }}
+        base: ${{ steps.base-ref.outputs.ref }}{% endraw %}
         filters: |
           api:
-            - 'stackranked/**'
+            - '{{ package_folder }}/**'
           fe:
             - 'frontend/**'
           infra:
@@ -58,5 +59,5 @@ runs:
             - 'network-exporter/**'
             - 'docker-compose.*.yml'
           migrations:
-            - 'stackranked/alembic/versions/**'
-          
+            - '{{ package_folder }}/alembic/versions/**'
+
