--- a/output/.github/workflows/on-demand-deployment.yml.jinja
+++ b/output/.github/workflows/on-demand-deployment.yml.jinja
@@ -38,11 +38,12 @@ on:
         default: true
 
 env:
-  NETWORK_DOMAIN_NAME: stackedrank.com
-  GLOBAL_APP_NAME: stackranked
-  APP_SHORT_NAME: sr
+  NETWORK_DOMAIN_NAME: {{ main_domain }}
+  GLOBAL_APP_NAME: {{ application_slug }}
+  APP_SHORT_NAME: {{ application_abbreviation }}
   NETWORK_HEALTH_CHECK_INTERVAL: 30
-  SENTRY_ORGANIZATION_SLUG: nick-derobertis
+  SENTRY_ORGANIZATION_SLUG: {{ sentry_organization_slug }}
+{%- raw %}
 
 jobs:
   codegen:
