--- a/output/frontend/stackranked/.env.local.template.jinja
+++ b/output/frontend/stackranked/.env.local.template.jinja
@@ -2,6 +2,6 @@ NEXT_PUBLIC_API_URL=http://localhost:8001
 NEXT_PUBLIC_ENABLE_DEV_PAGES=true
 NEXT_PUBLIC_GOOGLE_SCOPES=https://www.googleapis.com/auth/userinfo.email,https://www.googleapis.com/auth/userinfo.profile
 NEXT_PUBLIC_SENTRY_DSN=
-SENTRY_ORG=
-SENTRY_PROJECT=
+SENTRY_ORG={{ sentry_organization_slug }}
+SENTRY_PROJECT={{ application_slug }}-staging-web
 SENTRY_URL=https://sentry.io/
