--- a/output/infra/common/api/api.hcl.jinja
+++ b/output/infra/common/api/api.hcl.jinja
@@ -12,7 +12,7 @@ EOF
 
 locals {
   app_short_name    = get_env("APP_SHORT_NAME")
-  project_directory = abspath("${get_terragrunt_dir()}/../../../../stackranked")
+  project_directory = abspath("${get_terragrunt_dir()}/../../../../{{ package_folder }}")
 }
 
 terraform {
