--- a/output/infra/scripts/internal/deploy-api.sh.jinja
+++ b/output/infra/scripts/internal/deploy-api.sh.jinja
@@ -11,7 +11,7 @@ ecr_address=$(echo $output | jq -r '.ecr_address.value')
 # Log into docker first to fail fast if no access
 aws ecr get-login-password --region "$aws_region" | docker login --username AWS --password-stdin "$ecr_address"
 
-project_path=../../../../stackranked
+project_path=../../../../{{ package_folder }}
 
 hash=$(LC_ALL=POSIX find $project_path -type f -print0 | sort -z | xargs -0 sha1sum | sha1sum | cut -d " " -f 1)
 full_image_name="$base_image_name:$hash"
@@ -22,4 +22,5 @@ echo "Pushing API image ${full_image_name}"
 docker push $full_image_name
 
 echo "Deploying $full_image_name to $cluster_name/$service_name/$container_name"
-ecs deploy "$cluster_name" "$service_name" --image "$container_name" "$full_image_name" --region "$aws_region" --timeout 1200
+ecs deploy "$cluster_name" "$service_name" --image "$container_name" "$full_image_name" --region "$aws_region" --timeout
+1200
