--- a/output/frontend/stackranked/README.md.jinja
+++ b/output/frontend/stackranked/README.md.jinja
@@ -26,4 +26,4 @@ add the preview URL to the list of allowed origins. It will work in development 
 
 ## Author
 
-Created by Nick DeRobertis. MIT license.
+Created by {{ package_author }}. MIT license.
