fix: Add matching endraw statements for every raw statement

--- a/output/.github/actions/full-stack-deploy/action.yml.jinja
+++ b/output/.github/actions/full-stack-deploy/action.yml.jinja
@@ -110,3 +110,4 @@ runs:
       with:
         name: infra-generated-${{ inputs.environment }}
         path: infra/${{ inputs.environment }}/generated
+{%- endraw %}
