--- a/output/.github/actions/rollback-infra/action.yml.jinja
+++ b/output/.github/actions/rollback-infra/action.yml.jinja
@@ -43,3 +43,4 @@ runs:
       with:
         name: infra-generated-${{ inputs.environment }}
         path: infra/${{ inputs.environment }}/generated
+{%- endraw %}
