--- a/output/.github/actions/rollback-migrations/action.yml.jinja
+++ b/output/.github/actions/rollback-migrations/action.yml.jinja
@@ -66,3 +66,4 @@ runs:
         staging-subdomain: ${{ inputs.staging-subdomain }}
         command: downgrade
         revision: ${{ steps.get-latest-revision.outputs.revision }}
+{%- endraw %}
