--- a/output/.github/actions/run-migrations/action.yml.jinja
+++ b/output/.github/actions/run-migrations/action.yml.jinja
@@ -68,3 +68,4 @@ runs:
         # Disconnect VPN
         cd $orig_dir/infra/${{ inputs.environment }}
         ./scripts/disconnect-vpn.sh
+{%- endraw %}
