--- a/output/.github/workflows/pr-previews.yml.jinja
+++ b/output/.github/workflows/pr-previews.yml.jinja
@@ -233,5 +233,5 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           e2e-rapid-api-key: ${{ secrets.E2E_RAPID_API_KEY }}
-
+{%- endraw %}
 
