--- a/output/.github/workflows/rollback.yml.jinja
+++ b/output/.github/workflows/rollback.yml.jinja
@@ -93,3 +93,4 @@ jobs:
           environment: ${{ inputs.environment }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+{%- endraw %}
