--- a/output/.github/workflows/on-demand-deployment.yml.jinja
+++ b/output/.github/workflows/on-demand-deployment.yml.jinja
@@ -101,3 +101,4 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           e2e-rapid-api-key: ${{ secrets.E2E_RAPID_API_KEY }}
+{%- endraw %}
